tests/baselines/reference/-57087-50.errors.txt
-57087-50.ts(12,4): error TS1360: Type '(x: { a: string; b: number; }) => void' does not satisfy the expected type 'GOR'.
  Type '(x: { a: string; b: number; }) => void' is not assignable to type '(x: { a: string; }) => void'.
    Types of parameters 'x' and 'x' are incompatible.
      Property 'b' is missing in type '{ a: string; }' but required in type '{ a: string; b: number; }'.
-57087-50.ts(17,4): error TS1360: Type '(x: { a: string; b: number; }) => void' does not satisfy the expected type 'GAND'.
  Type '(x: { a: string; b: number; }) => void' is not assignable to type '(x: { a: string; }) => void'.
    Types of parameters 'x' and 'x' are incompatible.
      Property 'b' is missing in type '{ a: string; }' but required in type '{ a: string; b: number; }'.
-57087-50.ts(19,19): error TS1360: Type 'GOR' does not satisfy the expected type 'GAND'.
  Type '(x: { a: string; }) => void' is not assignable to type 'GAND'.
    Type '(x: { a: string; }) => void' is not assignable to type '(x: { b: number; }) => void'.
      Types of parameters 'x' and 'x' are incompatible.
        Property 'a' is missing in type '{ b: number; }' but required in type '{ a: string; }'.


==== -57087-50.ts (3 errors) ====
    declare function f1(x:{ a: string } | { b: number }):void;
    declare function f2(x:{ a?: string, b?: number }):void;
    declare function f3(x:{ a: string, b: number }):void;
    
    type GOR = ((x:{ a: string })=>void) | ((x:{ b: number }) => void);
    
    type GAND = ((x:{ a: string })=>void) & ((x:{ b: number }) => void);
    
    
    f1 satisfies GOR; // should be true
    f2 satisfies GOR; // should be true
    f3 satisfies GOR; // should be false
       ~~~~~~~~~
!!! error TS1360: Type '(x: { a: string; b: number; }) => void' does not satisfy the expected type 'GOR'.
!!! error TS1360:   Type '(x: { a: string; b: number; }) => void' is not assignable to type '(x: { a: string; }) => void'.
!!! error TS1360:     Types of parameters 'x' and 'x' are incompatible.
!!! error TS1360:       Property 'b' is missing in type '{ a: string; }' but required in type '{ a: string; b: number; }'.
!!! related TS2728 -57087-50.ts:3:36: 'b' is declared here.
    
    
    f1 satisfies GAND; // should be true
    f2 satisfies GAND; // should be true
    f3 satisfies GAND; // should be false
       ~~~~~~~~~
!!! error TS1360: Type '(x: { a: string; b: number; }) => void' does not satisfy the expected type 'GAND'.
!!! error TS1360:   Type '(x: { a: string; b: number; }) => void' is not assignable to type '(x: { a: string; }) => void'.
!!! error TS1360:     Types of parameters 'x' and 'x' are incompatible.
!!! error TS1360:       Property 'b' is missing in type '{ a: string; }' but required in type '{ a: string; b: number; }'.
!!! related TS2728 -57087-50.ts:3:36: 'b' is declared here.
    
    (0 as any as GOR) satisfies GAND; // should be false
                      ~~~~~~~~~
!!! error TS1360: Type 'GOR' does not satisfy the expected type 'GAND'.
!!! error TS1360:   Type '(x: { a: string; }) => void' is not assignable to type 'GAND'.
!!! error TS1360:     Type '(x: { a: string; }) => void' is not assignable to type '(x: { b: number; }) => void'.
!!! error TS1360:       Types of parameters 'x' and 'x' are incompatible.
!!! error TS1360:         Property 'a' is missing in type '{ b: number; }' but required in type '{ a: string; }'.
!!! related TS2728 -57087-50.ts:5:18: 'a' is declared here.
    (0 as any as GAND) satisfies GOR; // should be true
    